// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-if > comment between branches 1`] = `
"
  const n1 = _createIf(() => ("ok"), () => {
    const n3 = t0()
    return n3
  }, () => _createIf(() => ("orNot"), () => {
    const n8 = t1()
    return n8
  }, () => {
    const n14 = t2()
    return n14
  }), true)
  return n1
"
`;

exports[`compiler: v-if > dedupe same template 1`] = `
"
  const n0 = _createIf(() => (ok), () => {
    const n2 = t0()
    return n2
  })
  const n3 = _createIf(() => (ok), () => {
    const n5 = t0()
    return n5
  })
  return [n0, n3]
"
`;

exports[`compiler: v-if > template v-if 1`] = `
"
  const n0 = _createIf(() => (ok), () => {
    const n2 = t0()
    const n3 = t1()
    const n4 = t2()
    _setText(n4, () => (msg))
    return [n2, n3, n4]
  })
  return n0
"
`;

exports[`compiler: v-if > v-if + v-else 1`] = `
"
  const n0 = _createIf(() => (ok), () => {
    const n2 = t0()
    return n2
  }, () => {
    const n4 = t1()
    return n4
  })
  return n0
"
`;

exports[`compiler: v-if > v-if + v-else-if + v-else 1`] = `
"
  const n0 = _createIf(() => (ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (orNot), () => {
    const n4 = t1()
    return n4
  }, () => {
    const n7 = t2()
    return n7
  }))
  return n0
"
`;

exports[`compiler: v-if > v-if + v-else-if 1`] = `
"
  const n0 = _createIf(() => (ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (orNot), () => {
    const n4 = t1()
    return n4
  }))
  return n0
"
`;
